Import of DCONWAY/Config-Std-v0.0.4 from CPAN.
gitpan-cpan-distribution: Config-Std
gitpan-cpan-version:      v0.0.4
gitpan-cpan-path:         DCONWAY/Config-Std-v0.0.4.tar.gz
gitpan-cpan-author:       DCONWAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -28,3 +28,8 @@ Revision history for Config-Std
 
     - Added mechanism to allow read_config() and write_config() to be renamed
       when exported (thanks David)
+
+
+0.0.4  Mon Feb 20 08:03:45 2006
+
+    - Removed spurious dependency on Smart::Comments
